--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Real Time Chat App With Room",
   "main": "server.js",
   "scripts": {
-    "start":"nodemon index.js",
+    "start":"node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Manikant Kumar",
